--- a/.github/workflows/automatize-unit-tests.yml
+++ b/.github/workflows/automatize-unit-tests.yml
@@ -1,17 +1,17 @@
 name: automatize-unit-tests.yml
+
 on:
   push:
     branches:
       - main
-
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - Checkout code
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Setup JDK 17
         uses: actions/setup-java@v3
@@ -21,4 +21,3 @@ jobs:
 
       - name: Run Unit Tests
         run: mvn test
-
